<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cadastro</string>
    <string name="title_activity_lista_alunos">Alunos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lista_alunos_material">ListaAlunosMaterialActivity</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="site">Site</string>
    <string name="salvar">Salvar</string>
    <string name="email">Email</string>
    <string name="title_activity_lista_alunos_recycler">ListaAlunosRecyclerActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_provas">Provas</string>
    <string name="tipo_dispositivo">SMARTPHONE</string>
    <string name="title_activity_mostrar_alunos">Mostrar Alunos</string>

</resources>
