
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="235dp">
            <ImageView
                android:id="@+id/formulario_foto"
                android:src="@drawable/person"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="#00ABEC"/>


            <Button
                android:id="@+id/formulario_foto_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/fundo_foto"
                android:elevation="5dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                />
            </RelativeLayout>


        <EditText
            android:id="@+id/formulario_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:capitalize="words"
            android:hint="@string/nome" />

        <EditText
            android:id="@+id/formulario_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="phone"
            android:digits="0123456789+"
            android:hint="@string/telefone" />

        <EditText
            android:id="@+id/formulario_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/endereco" />

        <EditText
            android:id="@+id/formulario_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textUri"
            android:hint="@string/site" />
        <EditText
            android:id="@+id/formulario_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <RatingBar
            android:id="@+id/formulario_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:max="10" />

    </LinearLayout>
</ScrollView>
